--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
-    "https": "^1.0.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^2.15.0",
     "mongoose": "^8.0.1",
@@ -33,6 +36,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
