--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
     "react-redux": "^8.1.3",
